Fixes: NB#260974 - [TASK] Change notification visibility time RevBy: TrustMe

--- a/base/meegotouch/libmeegotouchviews/style/mbannerstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mbannerstyle.css
@@ -31,6 +31,7 @@ MBannerStyle #ShortEventBanner {
     maximum-size: 100% 3.6mm;
     preferred-size: 100% 3.6mm;
     background-image: "meegotouch-shorteventbanner-background" 10px 10px 10px 10px;
+    disappear-timeout: 2500;
 }
 
 #ShortEventBannerTitle {
